优化文档及编译脚本

--- a/.drone.yml
+++ b/.drone.yml
@@ -30,6 +30,8 @@ steps:
       password:
         from_secret: DOCKER_SELF_PASSWORD
       purge: false
+    depends_on:
+      - build-image
   - name: mergeimages
     image: plugins/manifest
     settings:
